objects/Issue__c.object
<CustomObject>
    <description>Stores JIRA Issue Object</description>
    <fields>
        <fullName>Assignee__c</fullName>
        <label>Assignee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backlog_Reason__c</fullName>
        <label>Backlog Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>JIRA Issue</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Company__c</fullName>
        <label>Customer Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Defect_Reason__c</fullName>
        <label>Defect Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fix_Version__c</fullName>
        <label>Fix_Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Date__c</fullName>
        <label>Fixed Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC Issue Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JIRA__c</fullName>
        <formula>IF( 
Key__c = NULL, 
&quot;Link not available&quot;, 
HYPERLINK( $Setup.JIRA_Edit_URL__c.url__c  &amp; Key__c, &quot;Edit&quot; ,&quot;_blank&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JIRA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Planned_Release_Date__c</fullName>
        <label>Planned Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <label>Planned Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter__c</fullName>
        <label>Reporter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Cause_of_Failure__c</fullName>
        <label>Root Cause of Failure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>